--- a/views/admin/edit-product.hbs
+++ b/views/admin/edit-product.hbs
@@ -245,7 +245,7 @@
         <label for="input-6">Product Images</label>
         <div class="input-group">
             <div class="custom-file">
-                <input type="file" name="productImage" class="custom-file-input" id="productImage" aria-describedby="input-6-addon" accept="image/*" multiple>
+                <input type="file" name="Image" class="custom-file-input" id="Image" aria-describedby="input-6-addon" accept="image/*" multiple>
                 <label class="custom-file-label" for="input-6">Choose files</label>
             </div>
         </div>
