--- a/views/user/layouts/layout.hbs
+++ b/views/user/layouts/layout.hbs
@@ -19,6 +19,8 @@
 <link rel="stylesheet" href="/stylesheets/css/style.css">
 <link rel="stylesheet" href="/stylesheets/css/responsive.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <style>
 	.message-box {
     display: flex;
