--- a/views/user/partials/minicart.hbs
+++ b/views/user/partials/minicart.hbs
@@ -9,7 +9,7 @@
                                     	<img src="/{{this.product.productImage.[0]}}" alt="3/4 Sleeve Kimono Dress" title="" />
                                     </a>
                                     <div class="product-details">
-                                    	{{!-- <a href="/cart" class="remove"><i class="anm anm-times-l" aria-hidden="true"></i></a> --}}
+                                    	<a href="/cart" class="remove"><i class="anm anm-times-l" aria-hidden="true"></i></a>
                                         <a href="/cart" class="edit-i remove"><i class="anm anm-edit" aria-hidden="true"></i></a>
                                         <a class="pName" href="/cart">{{this.product.name}}</a>
                                         <div class="variant-cart">{{this.product.brand}}</div>
