--- a/views/user/shop.hbs
+++ b/views/user/shop.hbs
@@ -747,7 +747,7 @@ swal.fire({
                     success: function(response) {
                         if (response.success) {
                                   document.dispatchEvent(new Event('productAdded'));
-
+                            updateMinicart()
                             $('#cart-popup').fadeIn();
                             setTimeout(function() {
                                 $('#cart-popup').fadeOut();
@@ -788,7 +788,7 @@ swal.fire({
                     success: function(response) {
                         if (response.success) {
                                   document.dispatchEvent(new Event('productAdded'));
-
+                                updateMinicart()
                             if(response.clearGuestCart){
                              localStorage.removeItem('guestCart');
                             $('#cart-popup').fadeIn();
@@ -810,6 +810,19 @@ swal.fire({
                     }
                 });
             }
+
+            function updateMinicart() {
+        $.ajax({
+            url: '/get-minicart',
+            type: 'GET',
+            success: function(html) {
+                $('#minicart-container').html(html);
+            },
+            error: function(error) {
+                console.error('Error updating minicart:', error);
+            }
+        });
+    }
         });
     });
 </script>
