--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -211,12 +211,9 @@
         <label for="input-5">Category</label>
         <select class="form-control" id="category" name="category">
             <option selected="selected" value="">Select Category</option>
-            <option value="new arrival">New Arrival</option>
-            <option value="trending">Trending</option>
-            <option value="most popular">Most Popular</option>
-            <option value="character addition">Character Addition</option>
-            <option value="shoes for men">Shoes for Men</option>
-            <option value="shoes for women">Shoes for Women</option>
+            {{#each categories}}
+            <option value="{{this.name}}">{{this.name}}</option>
+           {{/each}}
         </select>
     </div>
     <div class="form-group">
@@ -235,7 +232,7 @@
         <label for="input-6">Product Image</label>
         <div class="input-group">
             <div class="custom-file">
-                <input type="file" name="productImage" class="custom-file-input" id="productImage" aria-describedby="input-6-addon" accept="image/*" multiple>
+                <input type="file" name="Image" class="custom-file-input" id="Image" aria-describedby="input-6-addon" accept="image/*" multiple>
                 <label class="custom-file-label" for="input-6">Choose file</label>
             </div>
         </div>
@@ -334,7 +331,7 @@ function validateForm() {
     var description = document.getElementById("description").value;
     var stock = document.getElementById("stock").value;
     var expireDate = document.getElementById("expireDate").value;
-    var productImage = document.getElementById("productImage").value;
+    var productImage = document.getElementById("Image").value;
 
     if (!name.trim() || !brand.trim() || !price.trim()|| !category.trim() || !description.trim() || !stock.trim() || !expireDate.trim() || !productImage.trim()) {
         Swal.fire({
